--- a/Sections/2_Theory_Models/SixS.tex
+++ b/Sections/2_Theory_Models/SixS.tex
@@ -246,7 +246,7 @@ When performing BCDI measurements, a smaller version of the XCAT is used which i
 The two reactors have the same inner volume and host the same sample holder stage (fig \ref{fig:SampleHolder}).
 The main setbacks being the lack of sputtering gun and the impossibility to study catalytic reaction in batch mode (as opposite to flow mode) due to the design of the small reactor (the leak to the RGA is after the pressure controller in the small reactor).
 
-The partial pressure of each gas detected after the leak in the main circuit (fig. \ref{fig:GasSupplySystem}) by the residual gas analyser can be converted back to partial pressures in the reactor by assuming (i) ideal gas behaviour (ii) homogeneous temperatures in the reactor and in the RGA chamber (iii) no selectivity of the gases through the leak, \textit{i.e.} the ratio between the partial pressures after the leak is the same that in the reactor (iv) all gases are detected by the RGA (v) the ratio between the incoming gases flow is the same as the ratio between the partial pressures in the reactor in the abscence of reaction.
+The partial pressure of each gas detected after the leak in the main circuit (fig. \ref{fig:GasSupplySystem}) by the residual gas analyser can be converted back to partial pressures in the reactor by assuming (i) ideal gas behaviour (ii) homogeneous temperatures in the reactor and in the RGA chamber (iii) no selectivity of the gases through the leak, \textit{i.e.} the ratio between the partial pressures after the leak is the same that in the reactor (iv) all gases are detected by the RGA (v) the ratio between the incoming gases flow is the same as the ratio between the partial pressures in the reactor in the absence of reaction.
 The partial pressure of argon, which does not partake in the reaction, is then used to compute the partial pressure of each gas in the XCAT chamber.
 
 For example, at a reactor pressure of \qty{0.5}{\bar}, a total gas flow of \qty{50}{\ml\per\min}, a partial gas flow of \ce{NH_3} equal to \qty{1}{\ml\per\min}, and a partial gas flow of argon equal to \qty{49}{\ml\per\min}, we estimate the partial pressure of argon in the reactor to be equal to \qty{490}{\milli\bar}.
