--- a/Sections/3_Results_Nanoparticles/Conclusion.tex
+++ b/Sections/3_Results_Nanoparticles/Conclusion.tex
@@ -1,16 +1,17 @@
 \section{Discussion}
 
 % Particle A, Temp ramp
-The reshaping of a Pt nanoparticle (particle \textit{A}) during heating from \qty{125}{\degreeCelsius} to \qty{600}{\degreeCelsius} under an inert gas flow was put into evidence, with an important evolution as a function of the sample temperature of the type of facets present on the particle substrate (fig. \ref{fig:AmaterasuFacetsEvolution}), and of the presence or not of dislocations at the interface (fig. \ref{fig:AmaterasuA}, \ref{fig:AmaterasuB}).
+The reshaping of a Pt nanoparticle (particle \textit{A}) during heating from \qty{125}{\degreeCelsius} to \qty{600}{\degreeCelsius} under an inert gas flow was put into evidence.
+An important evolution as a function of the sample temperature of the type of facets present on the particle substrate (fig. \ref{fig:AmaterasuFacetsEvolution}), and of the presence or not of dislocations at the interface (fig. \ref{fig:AmaterasuA}, \ref{fig:AmaterasuB}) was reported.
 
 The importance of the metal-support interactions for catalysis was demonstrated for smaller nanoparticles (below \qty{4}{\nm}) in a general study by van Deelen et al. \parencite*{vanDeelen2019}.
 In this study, the importance of taking into account the presence of interfacial strain when studying the facet strain was also highlighted with particle \textit{A} (fig. \ref{fig:AmaterasuStrain}), similarly to other BCDI studies of catalytic reactions.
 For example, Kim et al. \parencite*{Kim2021} have measured different strain evolution for \{111\} facets depending on their orientation with the \ce{SrTiO_3} substrate (\ce{CO} oxidation, Pt-Rh nanoparticles, \qty{100}{\nm} large).
 Similar conclusions have been reached by Dupraz et al. \parencite*{Dupraz2022}, also during the oxidation of \ce{CO} with Pt nanoparticles (\qty{300}{\nm} large particle).
 
-Particle \textit{A} exhibited a symmetric shape only at \qty{450}{\degreeCelsius} (fig. \ref{fig:AmaterasuFacetsEvolution}), isolated \{110\} \{212\} and \{211\} facets were otherwise detected
-One reconstruction at a higher temperature (\qty{600}{\degreeCelsius}) showed a hole in the Bragg electronic density near the particle substrate (fig. \ref{fig:AmaterasuB}).
-The evolution of the lattice parameter as a function of the temperature (fig. \ref{fig:AmaterasuHomoStrain}) shows that nanoparticles do not follow the same thermal relaxation curves as expected from literature values, which is probably due to an important surface/volume ratio, \textit{i.e.} surface energy minimisation processes \parencite{Winterbottom1967, Boukouvala2021} having an impact on the strain field.
+Particle \textit{A} exhibited a symmetric shape only at \qty{450}{\degreeCelsius} (fig. \ref{fig:AmaterasuFacetsEvolution}), isolated \{110\} \{212\} and \{211\} facets were otherwise detected.
+A reconstruction at a higher temperature (\qty{600}{\degreeCelsius}) showed a hole in the Bragg electronic density near the particle substrate (fig. \ref{fig:AmaterasuB}).
+The evolution of the lattice parameter as a function of the temperature (fig. \ref{fig:AmaterasuHomoStrain}) shows that nanoparticles do not follow the same thermal relaxation curves as expected from literature values, which is probably due to an important surface/volume ratio, \textit{i.e.} surface energy minimisation processes \parencite{Winterbottom1967, Boukouvala2021}, having an impact on the strain field.
 
 % Ammonia ox
 The oxidation of ammonia has been extensively studied by the means of surface techniques in the previous and current century as detailed in sec. \ref{sec:LiteratureAmmonia}.
@@ -26,7 +27,7 @@ Time-resolved measurements of the dynamics of the dislocation network as well as
 The influence of the introduction of oxygen at \qty{600}{\degreeCelsius} could not be probed due to the loss of particle \textit{A}, which detached from the substrate.
 The high temperature reached by the nano catalyst during the exothermic oxidation of ammonia \parencite{Hatscher2008} could have resulted in a loss of quality of the epitaxial relationship with the substrate.
 
-Two additional particles, namely \textit{B} and \textit{C}, were measured at both \qty{300}{\degreeCelsius} and \qty{400}{\degreeCelsius}, respectively before and after the activation temperature expected from the fast characterisation of the catalyst shown in fig. \ref{fig:TempRamps}.
+Two additional particles, namely \textit{B} and \textit{C}, were measured at both \qty{300}{\degreeCelsius} and \qty{400}{\degreeCelsius}, respectively before and after the activation temperature expected from the characterisation of the catalyst shown in fig. \ref{fig:TempRamps}.
 
 % Particle C
 The introduction of ammonia at \qty{300}{\degreeCelsius} can be linked to a global decrease of the heterogeneous strain in particle \textit{C}, whose surface consists exclusively of \{111\}, \{110\} and \{100\} facets, visible from the decrease of the strain field energy in fig. \ref{fig:D6SFE}, the return to a symmetrical diffraction pattern in fig. \ref{fig:D6Ortho}, and the decrease of the FWHM in all three directions in fig. \ref{fig:D6FWHM}.
@@ -37,16 +38,16 @@ However, such a scenario implies changes in the surface strain when introducing 
 The absence of change in the facet strain following the introduction of oxygen and during the oxidation of ammonia can be due to different phenomena.
 
 First, the change in the facet strain is too small to be detected due to the low spatial resolution of the experiment, meaning that it is damped by being averaged with \textit{bulk} layers.
-For example, oxygen adsorption induced strain on the Pt terminated \{100\} and \{111\} facets has been simulated to be nul \qty{8}{\nm} away from the surface in the bulk \parencite{Kim2021}.
+For example, oxygen adsorption induced strain on the Pt terminated \{100\} and \{111\} facets has been simulated to be null \qty{8}{\nm} away from the surface in the bulk \parencite{Kim2021}.
 
-Secondly, there is no change of facet strain following the introduction of oxygen, which could be interpreted by nitrogen-rich species being too strongly adsorbed on the particle surface to participate in the catalytic reaction.
+Secondly, there is no change of facet strain following the introduction of oxygen, which could be interpreted by nitrogen-rich species being so strongly adsorbed on the particle surface that they do no participate in the catalytic reaction.
 If this was indeed the case, it would mean that all three types of facets are poisoned at a \ce{NH_3} pressure equal to \qty{6}{\milli\bar}, showing a remarkably strong adsorption on many different atomic sites.
 A strong evolution of particle \textit{A} was also observed under the sole presence of ammonia at \qty{600}{\degreeCelsius}, with the main structural differences being the absence of \{110\} facets (fig. \ref{fig:AmaterasuFacetsEvolution}), and a dislocation network at the interface (fig. \ref{fig:AmaterasuB}).
 
-Thirdy, the oxidation of ammonia at ambient pressure does not involve the adsorption of oxygen on the catalyst surface, functionning \textit{via} an Eley-Rideal mechanism \parencite{Rideal1939}, the production of \ce{NO} and \ce{N_2O} happening by the reaction of gas-phase oxygen with nitrogen adsorbed species.
-The surface strain would then not change with different atmospheres.
-This finding would be in contradiction with some studies that have proved for example the importance of prior oxygen coverage on the reaction selectivity \parencite{Bradley1995}.
-\textcolor{Important}{need to find ambient pressure literature}
+Thirdly, the oxidation of ammonia at ambient pressure does not involve the adsorption of oxygen on the catalyst surface, functioning \textit{via} an Eley-Rideal mechanism \parencite{Rideal1939}, the production of \ce{NO} and \ce{N_2O} happening by the reaction of gas-phase oxygen with nitrogen adsorbed species.
+The surface strain would then not be expected to evolve during change of atmospheres.
+This finding would be in contradiction with literature finding that have proved the importance of prior atomic \ce{O} and \ce{OH} coverage for the de-hydrogenation process of \ce{NH_3}, during a largely accepted Langmuir-Hinshelwood reaction mechanism \parencite{Bradley1995, Mieher1995,vandenBroek1999, Kim2000}.
+The pre-exposition of the particle to ammonia would prevent this mechanism and thus the production of \ce{N_2}, \ce{NO} and \ce{NO_2}.
 
 Moreover, a transition was observed in the homogeneous strain for particle \textit{C} at \qty{300}{\degreeCelsius} when introducing oxygen in the reactor (fig. \ref{fig:D6Latpara}), which was not reproduced at \qty{400}{\degreeCelsius}.
 The origin of this transition is not yet clear.
@@ -63,7 +64,8 @@ Thus, small changes are already visible at \qty{300}{\degreeCelsius} for particl
 The most impressive evolution occurs at \qty{400}{\degreeCelsius}, with the appearance of a defect in the particle, characterised by a second peak in the 3D scattered intensity, shifted in $\vec{q}_y$ with respect to the Bragg peak (fig. \ref{fig:B7Ortho}).
 The influence of the defect in both the heterogeneous (fig. \ref{fig:B7FWHM}, fig. \ref{fig:B7SFE}) and homogeneous strain (fig. \ref{fig:B7Latpara}) is clear once the ratio between \ce{O_2}/\ce{NH_3} ratio is equal to one, an atmosphere under which a non reversible increase of homogeneous and heterogeneous strain is observed.
 Indeed, if the defect appeared during the increase of temperature to \qty{400}{\degreeCelsius}, the particle shape and strain state seems to be stable until specific reaction conditions are achieved.
-To safely link defect dynamics and catalytic activity, several oxidation cycles would have to be measured, as well a exposition of the particle to progressive amount of oxygen.
+To safely link defect dynamics and catalytic activity, several oxidation cycles would have to be measured, as well as an exposition of the particle to progressive amount of oxygen.
+Nevertheless, it can safely be said that the evolution of particle \textit{B} seems to follow the reported activation and reconstruction process of industrial catalyst by defects reported by Hannevold et al. \parencite{Hannevold2005}.
 
 % Compare oxidation with literature
 The exposition of platinum nanoparticles epitaxied on glassy carbon to oxygen at \qty{200}{\degreeCelsius} has been probed by Fernandez et al. \parencite*{Fernandez2019}, shown to be linked with an \qty{0.09}{\percent} homogeneous tensile expansion of the particle in the [111] direction, linked to the formation of platinum surface oxides.
@@ -75,10 +77,10 @@ They hypothesised could be at the origin of different nano catalyst reshaping ph
 
 No reshaping of particle \textit{B} or \textit{C} was observed during the study of the ammonia oxidation with BCDI.
 However, a global reshaping of the nanoparticles was revealed by SXRD at \qty{600}{\degreeCelsius} under reacting conditions favouring oxygen rich products, \{113\} and \{110\} facets being probably replaced by \{100\} and \{111\} facets for which the CTR intensity increased.
-This reshaping was not detected at lower temperatures, no decrease of the [1$\bar{1}$3] CTR could be identified at \qty{300}{\degreeCelsius} or \qty{500}{\degreeCelsius}, meaning that the \{113\} facets present at room temperature on particle \textit{B} may yet still exist at \qty{300}{\degreeCelsius} and \qty{400}{\degreeCelsius}.
+This reshaping was not detected at lower temperatures, no decrease of the [1$\bar{1}$3] oriented CTR could be identified at \qty{300}{\degreeCelsius} or \qty{500}{\degreeCelsius}, meaning that the \{113\} facets present at room temperature on particle \textit{B} may yet still exist at \qty{300}{\degreeCelsius} and \qty{400}{\degreeCelsius}.
 A more detailed analysis of the 3D scattered intensity around the (111) Bragg peak may reveal if the particle has effectively lost the \{113\} facets or not.
 
-A particle with a similar shape to that of particle \textit{B} was measured by Dupraz et al. \parencite{Dupraz2022}, \{113\} facets are still visible during the presence of oxygen in the cell.
+A particle with a similar shape to that of particle \textit{B} was measured by Dupraz et al. \parencite*{Dupraz2022}, \{113\} facets are still visible during the presence of oxygen in the cell.
 The spatial resolution of the experiment is much higher than in the present study, due to the very high brilliance of Petra III in comparison with other $3^{rd}$ generation synchrotrons \parencite{Bilderback2005}.
 %Interestingly, they have also shown a different behaviour when exposing the catalyst to oxygen for the third time, after some \ce{CO} oxidation cycles.
 A relaxation of the out-of-plane heterogeneous strain $\epsilon_{zz}$ was observed on all facets (besides ($\bar{1}$10)-type facets) during the presence of oxygen in the cell.
@@ -87,7 +89,7 @@ No such relaxation was observed during this experiment, which supports that we a
 % Defects
 The presence of steps/surface defects on Pt (111) facets has been shown to increase the catalytic activity of Pt nanoparticles \parencite{Segner1984, Chen2012}.
 Indeed, defects have an impact of the local strain field, which can in turn influence the adsorption properties of molecules taking part in the reaction.
-During the oxidation of ammonia, defects could play a role in the step-by-step de-hydrogenation process of ammonia on the catalyst surface, favouring specific surface moieties and thus influencing the catalyst selectivity.
+During the oxidation of ammonia, defects could play a role in the step-by-step de-hydrogenation process of ammonia on the catalyst surface, favouring \ce{NO} desorption or dissociation and thus influencing the catalyst selectivity.
 
 Similarly to our results on nanoparticle \textit{B}, Kim et al. \parencite*{Kim2019} have measured the defect dynamics on a Pt nanoparticle during the catalytic methane oxidation.
 They have shown a reversible transition of the particle shape induced by the adsorption of oxygen at \qty{425}{\degreeCelsius} (no indication of the oxygen partial pressure), no such transition was observed at \qty{325}{\degreeCelsius}.
@@ -102,6 +104,7 @@ Defect dynamics have also been reported during the catalytic oxidation of \ce{CO
 These result tend to support the importance of defects in the catalytic activity of nanoparticles during the oxidation of ammonia.
 The defect introduced by heating at \qty{400}{\degreeCelsius} has probably altered the adsorption properties of particle \textit{B}, possibly creating steps on top of nanoparticle surface.
 Interestingly the change in the particle strain field is only visible after a certain \ce{O_2}/\ce{NH_3} ratio is reached (fig. \ref{fig:B7SFE}, \ref{fig:B7FWHM}), which can be linked to a transition to the adsorption of oxygen rich species (e.g. \ce{NO}, \ce{N_2O}) on the catalyst surface.
+The reproducibility of the result at \qty{300} and \qty{400} for particle \textit{B} for the same exposition time allow us to safely rule out the possibility of beam induced stuctural changes in particle \textit{B}.
 
 % RGA
 Reaction products were detected at \qty{300}{\degreeCelsius} and \qty{400}{\degreeCelsius} (fig. \ref{fig:RGANanoparticlesBCDIComparison}), overall an oxygen favoured \ce{O_2}/\ce{NH_3} ratio resulted in a higher proportion of \ce{NO} and \ce{N_2O}, which enabled us to probe the relationship between strain and catalyst selectivity.
@@ -114,9 +117,17 @@ This transition could although be a precursor to the \textit{activation} process
 % conclude
 To conclude, we have shown that it is of utmost importance to probe different nanoparticles before drawing a conclusion regarding their global behaviour during a heterogeneous catalytic reaction.
 The importance of the particle shape, \textit{i.e.} facet coverage as well as initial strain state was put into perspective by the study of the oxidation of ammonia at \qty{300}{\degreeCelsius} and \qty{400}{\degreeCelsius}, as a function of the ratio between \ce{Ar} and \ammonia.
-The presence of defect in particle \textit{B} was linked to an evolution of the particle strain state and shape once an oxygen rich atmosphere was reached in the reactor, favouring the production of \ce{NO} and \ce{N_2O}.
 
-This experiment has both demonstrated the value and limits of Bragg coherent diffraction imaging when studying heterogeneous catalytic reactions.
+The presence of defect in particle \textit{B} was linked to an evolution of the particle strain state and shape once an oxygen rich atmosphere was reached in the reactor, favouring the production of \ce{NO} and \ce{N_2O} over \ce{N_2}
+It is possible that the transformation of particle \textit{B} corresponds to the onset of activation and reconstruction observed in industrial samples, driven by the appearance of defects.
+Moreover, this behaviour could be connected to a more global behaviour of the nanoparticles present on the sample from the visible transition in terms on product pressure visible in the RGA.
+
+Particle \textit{C} has a completely different behaviour, showing no strain evolution during the catalytic reaction, possibly from an initial strain state that lead to strongly adsorbed specied not participating in the catalytic activity.
+
+This experiment has confirmed the importance of initial strain states for heterogeneous catalysis and will push forward nanoparticle strain engineering.
+The possibility of having different phenomena occuring under the same reacting conditions was revealed.
+
+Finally, this experiment has both demonstrated the value and limits of Bragg coherent diffraction imaging when studying heterogeneous catalytic reactions.
 The recent improvement of the instrumental setup (rocking curves performed in fly mode instead of step-by-step mode, sample scanning in Bragg conditions to find the nanoparticles, sapphire window in the dome) tend in the right direction.
 The planned upgrade of SOLEIL to a $4^{th}$ generation synchrotron will also play a key role in the hierarchy of SixS in the very competitive list of coherent imaging beamlines, the current resolution of the experiment being too low to properly resolve the smallest facets present of the particles, to distinguish between facets with similar orientations,to observe the growth of surface oxides or the strain in the topmost atomic layers.
 
