--- a/Sections/3_Results_Nanoparticles/Introduction.tex
+++ b/Sections/3_Results_Nanoparticles/Introduction.tex
@@ -11,9 +11,9 @@ Using single crystals as models to understand \textit{in-situ} and \textit{opera
 However, they fail when aiming at closing the material gap since they only exhibit a single crystallographic orientation on their surface, and are much larger (almost a \unit{cm} large) than the width of Pt-Rh gauzes used for the oxidation of ammonia (few 10s of \unit{\micro\meter} large, \cite{Kaiser1909}).
 
 % use nanoparticles
-In order to push for the reduction of the material gap as well as the pressure gap in heterogeneous catalysis, Pt nanoparticles have been used in this study, approaching the size of individual grains on the industrial catalysts \cite{} while exhibiting many different types of facets on their surface.
-Specifically, the catalytic structure-activity relationships of Pt nanoparticles will be investigated during the oxidation of ammonia, as a stepping stone to the study of Pt-Rh nanoparticles, recently studied as well during the oxidation of carbon monoxide \parencite{Kim2021}, in which the compositional strain must also be taken into account \parencite{Kawaguchi2019}.
-Moreover, studies have shown that nanoparticle surface strain can be controlled, opening up a new path to tune and optimise nanoparticle catalysts \parencite{Zhang2014, Sneed2015, Wang2016}.
+In order to push for the reduction of the material gap as well as the pressure gap in heterogeneous catalysis, Pt nanoparticles have been used in this study, approaching the size of individual grains on the industrial catalysts while exhibiting many different types of facets on their surface.
+Specifically, the catalytic structure-activity relationships of Pt nanoparticles will be investigated during the oxidation of ammonia, as a stepping stone to the study of Pt-Rh nanoparticles, approaching real industrial catalysts.
+Indeed, if Pt-Rh nanoparticles have recently been successfully studied with BCDI during the oxidation of carbon monoxide \parencite{Kim2021}, the presence of compositional strain in bi-metallic catalysts makes the study of surface strain increasingly difficult \parencite{Kawaguchi2019}.
 
 % sxrd
 It is first intended to measure the total signal scattered from \ce{Al_2O_3}-supported platinum particles by taking advantage of the possibility to carry out grazing-incidence diffraction measurements at the SixS beamline of synchrotron SOLEIL.
@@ -38,7 +38,7 @@ However, it must first be ensured that the nanoparticles do not move or change t
 Therefore, the preceding SXRD experiment will also aim at resolving the evolution of the epitaxial relationship between the Pt nanoparticles and the \ce{Al_2O_3} substrate before measuring single nanoparticles with Bragg coherent diffraction imaging, during which the beam is reduced to micrometric size, and for which a movement of the nanoparticles prevents the measurements of rocking curves due to loss of alignment.
 Both BCDI and SXRD can be applied to high gas pressures due to the x-rays’ high penetration in gasses.
 
-\subsection{$\alpha-$\ce{Al_2O_3} supported platinum nanoparticles synthesis}\label{sec:PtParticles}
+\subsection{$\alpha-$\ce{Al_2O_3} supported Pt nanoparticles synthesis}\label{sec:PtParticles}
 
 The platinum nanoparticles were synthesised thanks to a collaboration with the Israel Institute of Technology (Technion, collaboration with Dr. Eugene Rabkin), their use first showcased in the work by Dupraz et al. \parencite*{Dupraz2017}.
 A 30 nm thick homogeneous layer of platinum is deposited at room temperature on a [001] oriented alumina ($\alpha-$\ce{Al_2O_3}) substrate, which crystallises in a hexagonal unit cell.
