--- a/Sections/4_Results_SingleCrystals/Introduction.tex
+++ b/Sections/4_Results_SingleCrystals/Introduction.tex
@@ -121,7 +121,7 @@ The sample plane was realigned at the beginning of each condition in the direct 
     \label{fig:SampleSXRD}
 \end{figure}
 
-\subsection{Experimental setup for X-ray photoelectron spectroscopy} \label{sec:XPS111}
+\subsection{Experimental setup for x-ray photoelectron spectroscopy} \label{sec:XPS111}
 
 The NAP-XPS experiment was performed at the B07 end station at the Diamond Light Source \parencite{Held2020}.
 The electron analyser axis is at an angle of \ang{60.1} with respect to the beam and tilted at \ang{30} with respect to the horizontal plane, \textit{i.e.} close to the magic angle with respect to the polarisation vector.
