--- a/main.tex
+++ b/main.tex
@@ -247,9 +247,8 @@
     \input{Sections/2_Theory_Models/BCDI}
     \input{Sections/2_Theory_Models/SixS}
     \input{Sections/2_Theory_Models/ComputerPrograms}
-
 % Results BCDI
-    % \addtocontents{toc}{\protect\newpage}
+    \addtocontents{toc}{\protect\newpage}
     \chapter{Structural evolution of Pt nanoparticles during the oxidation of ammonia}
     \input{Sections/3_Results_Nanoparticles/Introduction}
     \input{Sections/3_Results_Nanoparticles/SXRDNanoparticles}
