--- a/references.bib
+++ b/references.bib
@@ -13,6 +13,17 @@ volume = {90},
 year = {2002}
 }
 
+@article{Wulff1901,
+title = {XXV. Zur Frage der Geschwindigkeit des Wachsthums und der Auflösung der Krystallflächen},
+author = {G. Wulff},
+pages = {449-530},
+volume = {34},
+number = {1-6},
+journal = {Zeitschrift für Kristallographie - Crystalline Materials},
+doi = {doi:10.1524/zkri.1901.34.1.449},
+year = {1901},
+}
+
 @Article{Hosmer1917,
 title={Literature Of The Nitrogen Industries, 1912-1916},
 journal={Journal of Industrial {\&} Engineering Chemistry},
@@ -578,6 +589,47 @@ pages = {},
 doi = {https://doi.org/10.1002/14356007.a17_293},
 year = {2000},
 abstract = {Abstract The article contains sections titled: 1. Nitric Acid 1.1. Introduction 1.2. Properties 1.3. Industrial Production 1.3.1. Oxidation of Ammonia 1.3.2. Oxidation and Absorption of Nitrogen Oxides 1.3.3. Equipment 1.3.3.1. Filters and Mixers 1.3.3.2. Burners and Waste-Heat Boilers 1.3.3.3. Compressors and Turbines 1.3.3.4. Heat Exchangers and Columns 1.3.3.5. Construction Materials 1.3.4. Processes 1.3.4.1. Weak Acid Processes 1.3.4.2. Concentrated Acid Processes 1.4. Environmental Protection 1.4.1. Wastewater 1.4.2. Stack Gas 1.4.2.1. Emission Limits 1.4.2.2. Analysis 1.4.2.3. Control of NOx Emissions 1.5. Storage and Transportation 1.6. Uses and Economic Aspects 2. Nitrous Acid 3. Nitrogen Oxides 3.1. Dinitrogen Monoxide 3.2. Nitrogen Monoxide 3.3. Nitrogen Dioxide and Dinitrogen Tetroxide 3.4. Dinitrogen Trioxide 3.5. Dinitrogen Pentoxide 4. Toxicology and Occupational Health}
+}
+
+@article{Rafiqul2005,
+title = {Energy efficiency improvements in ammonia production—perspectives and uncertainties},
+journal = {Energy},
+volume = {30},
+number = {13},
+pages = {2487-2504},
+year = {2005},
+issn = {0360-5442},
+doi = {https://doi.org/10.1016/j.energy.2004.12.004},
+author = {Islam Rafiqul and Christoph Weber and Bianca Lehmann and Alfred Voss},
+abstract = {The paper discusses the energy consumption and energy saving potential for a major energy-intensive product in the chemical industry-ammonia, based on technologies currently in use and possible process improvements. The paper consists of four parts. In the first part, mainly references to various ammonia production technologies are given. Energy consumption, emissions and saving potentials are discussed in the second part. Thereby, the situation in Europe, the US and India is highlighted and various data sources are compared. In the third part of the paper, a novel approach for modeling energy efficiency improvements is described that accounts for uncertainties and unobserved heterogeneity in the production processes. Besides new investments, revamping investments are also included in the modeling and the development of the production stock is accounted for. Finally, in the fourth part, this approach is applied to the modeling of energy efficiency improvements and CO2 emission reductions in ammonia production. Thereby, considerable improvements in specific energy use and CO2 emissions are found in the reference scenario, yet under the assumption of high oil and gas prices, a partial switch to coal based technologies is expected which lowers notably the CO2 efficiency. Introduction of a CO2 penalty under a certificate trading or other regime is on contrary found to foster energy efficiency and the use of low carbon technologies.}
+}
+
+@article{Sadykov2000,
+title = {Oxide catalysts for ammonia oxidation in nitric acid production: properties and perspectives},
+journal = {Applied Catalysis A: General},
+volume = {204},
+number = {1},
+pages = {59-87},
+year = {2000},
+issn = {0926-860X},
+doi = {https://doi.org/10.1016/S0926-860X(00)00506-8},
+author = {V.A Sadykov and L.A Isupova and I.A Zolotarskii and L.N Bobrova and A.S Noskov and V.N Parmon and E.A Brushtein and T.V Telyatnikova and V.I Chernyshev and V.V Lunin},
+keywords = {Ammonia oxidation, Nitric acid production, Oxide catalysts, Honeycomb monoliths, Perovskites},
+abstract = {This paper generalizes the results of long-term efforts aimed at research and development of industrial oxide catalysts for ammonia oxidation in the nitric acid production within two-bed (Pt gauzes+monolithic oxide layers) technology of the high pressure process. Main factors determining performance of precious metals and oxides in the high-temperature ammonia oxidation are considered. The surface oxygen bonding strength determined by the surface atomic structure appears to be the most important. From this point of view, existing approaches to synthesis of mixed oxide systems including perovskites with controlled nitric oxide selectivity and good stability in the high-temperature process of ammonia oxidation are analyzed. Main features of the bulk oxide monolithic catalysts production technology and principles of a two-bed system design based upon the process mathematical modeling are briefly outlined. Proven economic benefits of this technology recently commercialized in Russia at nitric acid plants are debated.}
+}
+
+@article{Chen2018,
+author = {Jingguang G. Chen  and Richard M. Crooks  and Lance C. Seefeldt  and Kara L. Bren  and R. Morris Bullock  and Marcetta Y. Darensbourg  and Patrick L. Holland  and Brian Hoffman  and Michael J. Janik  and Anne K. Jones  and Mercouri G. Kanatzidis  and Paul King  and Kyle M. Lancaster  and Sergei V. Lymar  and Peter Pfromm  and William F. Schneider  and Richard R. Schrock },
+title = {Beyond fossil fuel–driven nitrogen transformations},
+journal = {Science},
+volume = {360},
+number = {6391},
+pages = {eaar6611},
+year = {2018},
+doi = {10.1126/science.aar6611},
+URL = {https://www.science.org/doi/abs/10.1126/science.aar6611},
+eprint = {https://www.science.org/doi/pdf/10.1126/science.aar6611},
+abstract = {How much carbon does it take to make nitric acid? The counterintuitive answer nowadays is quite a lot. Nitric acid is manufactured by ammonia oxidation, and all the hydrogen to make ammonia via the Haber-Bosch process comes from methane. That's without even accounting for the fossil fuels burned to power the process. Chen et al. review research prospects for more sustainable routes to nitrogen commodity chemicals, considering developments in enzymatic, homogeneous, and heterogeneous catalysis, as well as electrochemical, photochemical, and plasma-based approaches. Science, this issue p. eaar6611 Nitrogen is fundamental to all of life and many industrial processes. The interchange of nitrogen oxidation states in the industrial production of ammonia, nitric acid, and other commodity chemicals is largely powered by fossil fuels. A key goal of contemporary research in the field of nitrogen chemistry is to minimize the use of fossil fuels by developing more efficient heterogeneous, homogeneous, photo-, and electrocatalytic processes or by adapting the enzymatic processes underlying the natural nitrogen cycle. These approaches, as well as the challenges involved, are discussed in this Review.}
 }
 
 @inbook{Hatscher2008,
@@ -1424,6 +1476,13 @@ volume = {109},
 year = {2003}
 }
 
+@online{PtRhGauze,
+  title = {Platinum / Rhodium Catalyst Gauzes},
+  year = 2023,
+  url = {http://www.ravindraheraeus.com/platinum_rhodium.html},
+  urldate = {2023-09-10},
+}
+
 @online{Matthey2022,
   title = {High Temperature Mechanical Properties of the Platinum Group Metals},
   year = 2022,
@@ -1610,7 +1669,6 @@ abstract = {The reaction pathways of N2 and N2O formation in the direct decompos
 abstract = {The structure transition Pt(100) 1 × 1 → hex is observed by means of LEED intensities. The clean metastable 1 × 1 phase is prepared by intermediate NO adsorption. The transition to the hexagonal surface structure, which is an activated process, is initiated by raising the temperature. Integral intensities for both integer order spots as well as for superstructure spots are taken as function of time for constant elevated temperatures and as function of temperature for continuous temperature increase. The development of spot profiles is recorded as well. It turns out that the spot half width of integer order spots remains constant during the transition. Intermediate stages during the structure change show considerable background which is concentrated to streaks and indicates structural disorder. The superstructure spots grow up from the streaks giving first a 1 × 5 pattern from which the final structure results by spot splitting in the very last stage of the transition. Their intensity increase is delayed with respect to the decrease of integer order spots. They occur already with a comparably narrow half width, which remains constant in a first part of the transition. In the second part, especially during the final splitting, a further reduction is observed. The results are qualitatively discussed to give a geometrical model of the reconstruction based on the shift of atomic rows. Quantitative evaluation of the intensity-time dependences results in the activation energy of the transition, $\Delta$E≈1.1 eV. From the temperature dependent measurements the surface Debye temperatures of the 1 × 1 and reconstructed phases are deduced to be roughly equal. {\textcopyright} 1982.},
 author = {Heinz, K. and Lang, E. and Strauss, K. and M{\"{u}}ller, K.},
 doi = {10.1016/0378-5963(82)90106-4},
-file = {:home/david/Documents/PhD/Papers/Pt_AR/heinz1982_Pt100_oxygen.pdf:pdf},
 issn = {03785963},
 journal = {Applications of Surface Science},
 number = {C},
@@ -1618,6 +1676,22 @@ pages = {611--624},
 title = {{Observation of the structural transition Pt(100) 1 × 1 → hex by LEED intensities}},
 volume = {11-12},
 year = {1982}
+}
+
+@phdthesis{Wiser2020,
+          school = {Technische Universit{\"a}t Darmstadt},
+          author = {Artur Wiser},
+            year = {2020},
+           title = {Investigation of the industrial NH3 oxidation by CFD simulations including detailed surface kinetics},
+             doi = {https://doi.org/10.25534/tuprints-00017208},
+}
+
+@phdthesis{Warner2013,
+          school = {University of Sydney},
+          author = {Warner, Maximilian},
+            year = {2013},
+           title = {The Kinetics of Industrial Ammonia Combustion},
+             doi = {http://hdl.handle.net/2123/9426 },
 }
 
 @article{Zeng2009,
@@ -1850,6 +1924,20 @@ pages  ="8663-8683",
 publisher  ="The Royal Society of Chemistry",
 doi  ="10.1039/C5NR00092K",
 abstract  ="The conversion of CO$_2$ into fuels and useful chemicals has been intensively pursued for renewable{,} sustainable and green energy. However{,} due to the negative adiabatic electron affinity (EA) and large ionization potential (IP){,} the CO$_2$ molecule is chemically inert{,} thus making the conversion difficult under normal conditions. Novel catalysts{,} which have high stability{,} superior efficiency and low cost{,} are urgently needed to facilitate the conversion. As the first step to design such catalysts{,} understanding the mechanisms involved in CO$_2$ conversion is absolutely indispensable. In this review{,} we have summarized the recent theoretical progress in mechanistic studies based on density functional theory{,} kinetic Monte Carlo simulation{,} and microkinetics modeling. We focus on reaction channels{,} intermediate products{,} the key factors determining the conversion of CO$_2$ in solid–gas interface thermocatalytic reduction and solid–liquid interface electrocatalytic reduction. Furthermore{,} we have proposed some possible strategies for improving CO$_2$ electrocatalysis and also discussed the challenges in theory{,} model construction{,} and future research directions."
+}
+
+@article{Sobczyk2004,
+title = {Low-temperature ammonia oxidation on platinum sponge studied with positron emission profiling},
+journal = {Journal of Catalysis},
+volume = {225},
+number = {2},
+pages = {466-478},
+year = {2004},
+issn = {0021-9517},
+doi = {https://doi.org/10.1016/j.jcat.2004.04.035},
+author = {D.P Sobczyk and J {van Grondelle} and P.C Thüne and I.E Kieft and A.M {de Jong} and R.A {van Santen}},
+keywords = {NH, O, Positron emission profiling, Ammonia oxidation, Deactivation, Platinum, Platinum sponge, Low temperature},
+abstract = {The low-temperature deactivation of a platinum sponge catalyst used for ammonia oxidation was studied with the positron emission profiling technique (PEP). Evidence that irreversibly adsorbed nitrogen species deactivate the catalyst is presented. Two reactivity regimes are distinguished. Initial fast N2 production at low surface coverage and a relatively slow N2 and N2O production at steady state when the surface is fully covered. The fast deactivation of the platinum sponge is mainly caused by adsorbed nitrogen species. The formation of PtO is relatively slow compared to surface nitride. The fast initial deactivation of platinum sponge by nitrogen and oxygen species is greatly retarded at temperatures above 388 K. Temperature-programmed reaction together with temperature-programmed desorption experiments show reactivation of the catalyst above this temperature.}
 }
 
 @phdthesis{Chatelier2020,
@@ -2598,6 +2686,49 @@ publisher = {Springer Japan},
 title = {{Analysis of non-iterative phase retrieval based on machine learning}},
 volume = {27},
 year = {2020}
+}
+
+@article{Contour1977,
+title = {X-ray photoelectron spectroscopy and electron microscopy of PtRh gauzes used for catalytic oxidation of ammonia},
+journal = {Journal of Catalysis},
+volume = {48},
+number = {1},
+pages = {217-228},
+year = {1977},
+issn = {0021-9517},
+doi = {https://doi.org/10.1016/0021-9517(77)90093-8},
+author = {J.P. Contour and G. Mouvier and M. Hoogewys and C. Leclere},
+abstract = {Scanning electron microscopy, X-ray photoelectron spectroscopy (XPS) and sputtering techniques are used to study platinum-rhodium gauzes working in industrial burners for ammonia oxidation. Electron microscopy shows that during the combustion, two distinct crystalline systems develop, namely, small rhodium-rich crystals and large platinum-rich geometric crystals with well-developed facets. Chemical analysis of the surface by XPS associated with ion sputtering shows that the catalyst deactivation may be caused by the segregation of rhodium at the surface, resulting from the volatilization of platinum oxide at high temperature after the oxidation of Rh and Pt. The small rhodium-rich crystals are identified as Rh2O3 and the oxidation ratio (Rh2O3Rh + Rh2O3) varies with the location of the gauzes in the catalytic pack: it is 0.2 at the head of the reactor and reaches up to 0.8 in the tail.}
+}
+
+@Article{Fierro1992,
+author={Fierro, J. L. G. and Palacios, J. M. and Tomas, F.},
+title={Characterization of catalyst and catchment gauzes used in medium- and low-pressure ammonia oxidation plants},
+journal={Journal of Materials Science},
+year={1992},
+month={Feb},
+day={01},
+volume={27},
+number={3},
+pages={685-691},
+abstract={Morphological and chemical changes of the Pt-Rh catalyst and palladium-based catchment gauzes used in medium- and low-pressure ammonia oxidation plants have been studied by scanning electron microscopy, combined with energy dispersive X-ray analysis (SEM-EDX), and X-ray photoelectron spectroscopy (XPS). It has been observed that the noble metals are mostly in the metallic state, and catalyst deactivation is determined by rhodium enrichment in the alloy surface. In the cases of a strong ``faceting'' of the wires, which tends to homogenize the catalyst surface, a good agreement between the surface composition determined by EDX and XPS was found. The Pt/Pd and Rh/Pd ratios in the catchment gauzes decreased markedly from the top to the bottom gauzes of the pack, indicating the directional effect of metal condensation or deposition from the gas stream.},
+issn={1573-4803},
+doi={10.1007/BF02403880},
+}
+
+@Article{Salanov2018,
+author={Salanov, A. N. and Suprun, E. A. and Serkova, A. N. and Sidel'nikova, O. N. and Sutormina, E. F. and Isupova, L. A. and Kalinkin, A. V. and Parmon, V. N.},
+title={Catalytic Etching of Platinoid Gauzes during the Oxidation of Ammonia by Air. Reconstruction of Surface of Platinoid Gauzes at 1133 K in Air, in Ammonia, and in an NH3 + O2 Reaction Medium},
+journal={Kinetics and Catalysis},
+year={2018},
+month={Jan},
+day={01},
+volume={59},
+number={1},
+pages={83-98},
+abstract={The structure, morphology, and chemical composition of the surface and near-surface layers of platinoid wires of polycrystalline gauzes, containing Pt (81 wt {\%}), Pd (15 wt {\%}), Rh (3.5 wt {\%}), and Ru (0.5 wt {\%}) after treatment at 1133 K in various media---in air, in ammonia, and after NH3 oxidation in air---are studied by X-ray diffraction (XRD), scanning electron microscopy (SEM), energy-dispersive X-ray (EDX) spectroscopy, and X-ray photoelectron spectroscopy (XPS). A thin film is found on the surface of the initial gauze containing an oxide layer of Rh2O3 with a thickness of {\textasciitilde}2 nm, on the surface of which an inhomogeneous graphite-like layer 10--50 nm thick is located. It is shown that the heat treatment of gauzes in air leads to the partial removal of the surface graphite-like film that forms the reticulated structure on the wire surface. The treatment of gauzes in an ammonia atmosphere leads to the complete removal of the graphite-like and oxide layers and to the growth of metal grains of {\textasciitilde}10 $\mu$m. After the catalytic reaction of NH3 oxidation, a deep structural rearrangement of the surface layer of the wire takes place, as a result of which crystalline metal agglomerates of {\textasciitilde}10 $\mu$m are formed. It is supposed that the reaction of NH3 molecules with oxygen atoms penetrated on the defects leads to the local increase of temperature, due to which the metal atoms emerge on the surface and form large crystalline agglomerates and pores in the region of the grain boundaries.},
+issn={1608-3210},
+doi={10.1134/S0023158418010093},
 }
 
 @article{Ruan2022,
@@ -5414,6 +5545,10 @@ volume = {9},
 year = {2012}
 }
 
+
+@article{Schmid2010, title={Dynamic mode decomposition of numerical and experimental data}, volume={656}, DOI={10.1017/S0022112010001217}, journal={Journal of Fluid Mechanics}, publisher={Cambridge University Press}, author={SCHMID, PETER J.}, year={2010}, pages={5–28}}
+
+
 @article{FavreNicolin2020a,
    title = {Free log-likelihood as an unbiased metric for coherent diffraction imaging},
    volume = {10},
@@ -6704,7 +6839,6 @@ pages = {297-306},
 year = {1999},
 issn = {0021-9517},
 doi = {https://doi.org/10.1006/jcat.1999.2506},
-url = {https://www.sciencedirect.com/science/article/pii/S002195179992506X},
 author = {A.C.M. {van den Broek} and J. {van Grondelle} and R.A. {van Santen}},
 abstract = {The activity of iridium and platinum sponge catalysts was studied in the low temperature gas phase oxidation of ammonia with oxygen. Under the reaction conditions used, iridium was found to be more active and more selective to nitrogen than platinum. Furthermore it was established from activity measurements that both catalysts lose activity as a function of time on stream due to inhibition of the surface by reaction intermediates. The used catalysts were studied with XPS and temperature programmed techniques. It was found that the surface of the catalysts had a high coverage of NH and OH and some additional NH2. It seems most likely that the reaction mechanism proceeds through a stepwise dehydrogenation of the ammonia molecule. It appears that the last dehydrogenation step (NH by OH to N and water) is the rate determining step. The high selectivity of iridium to nitrogen can be explained by the higher activity of iridium in dissociating NO.}
 }
