--- a/Sections/2_Theory_Models/Catalysis.tex
+++ b/Sections/2_Theory_Models/Catalysis.tex
@@ -1,6 +1,6 @@
 \section{Heterogeneous Catalysis}\label{sec:Catalysis}
 
-\textit{
+\epigraph{
 A catalyst is a substance that speeds up a chemical reaction, or lowers the temperature or pressure needed to start one, without itself being consumed during the reaction.
 Catalysis is the process of adding a catalyst to facilitate a reaction.
 }
@@ -44,11 +44,10 @@ Moreover, if the adsorption is too strong, the product of the reaction is not ab
 
 \begin{figure}[!htb]
     \centering
-    \includegraphics[width=0.49\textwidth]{/home/david/Documents/PhD/Figures/ammonia/ER.pdf}
-    \includegraphics[width=0.49\textwidth]{/home/david/Documents/PhD/Figures/ammonia/LH.pdf}
+    \includegraphics[trim=50 50 50 50, clip, width=0.49\textwidth]{/home/david/Documents/PhD/Figures/ammonia/ER.pdf}
+    \includegraphics[trim=50 50 50 50, clip, width=0.49\textwidth]{/home/david/Documents/PhD/Figures/ammonia/LH.pdf}
     \caption{
-        In the Eley Rideal mechanisms (a) one of the reactants interacts directly from the gas phase with an adsorbed layer of the other reactant, whereas for the Langmuir Hinshelwood mechanism (b) both of the reactants are adsorbed on the catalyst's surface.
-        \textcolor{Important}{ADD ARROWS, ENERGY PATH FOR REAGENTS; ETC ...}
+        In the Eley Rideal mechanisms (a) one of the reactants interacts directly from the gas phase with an adsorbed molecule of the other reactant, whereas for the Langmuir Hinshelwood mechanism (b) both of the reactants are adsorbed on nearby sites of the catalyst's surface.
     }
     \label{fig:Mechanisms}
 \end{figure}
@@ -58,41 +57,23 @@ When studying bi-molecular reactions, the Langmuir–Hinshelwood and Eley-Rideal
 In the Langmuir–Hinshelwood mechanism, both reactants are adsorbed in nearby sites at the surface of the catalyst, and react on the surface to form the product which is subsequently desorbed from the surface \parencite{Prins2018, ROSS2019}.
 In the Eley–Rideal mechanism, a reactant in the gas phase comes and interacts with the adsorbed reactant without being itself adsorbed, followed by the desorption of the product \parencite{Rideal1939, Weinberg1996}  (fig. \ref{fig:Mechanisms}).
 
-% In the third mechanism, an atom from the surface layer of the catalyst reacts with an adsorbed reactant, which creates a vacancy in his original position on the surface when the products is desorbed.
-% The vacancy is then replaced by an atom that comes from from the bulk or the gas phase \parencite{MARS1954, Doornkamp2000}.
-% This is called the Mars-Van Krevelen mechanism.
+In the third mechanism, an atom from the surface layer of the catalyst reacts with an adsorbed reactant, which creates a vacancy in his original position on the surface when the products is desorbed.
+The vacancy is then replaced by an atom that can either comes from the bulk of the catalyst, or from the dissociation of the catalyst atoms from the product molecule in the gas phase \parencite{Mars1954, Doornkamp2000}.
+This is called the Mars-Van Krevelen mechanism.
 
-The Langmuir–Hinshelwood mechanism seems to be generally preferred, the bonding of the reactant molecule to the atoms weakening its bonds and preparing the molecule for reaction by reducing the activation energy required for the reaction to occur \parencite{Baxter2002}.
+The Langmuir–Hinshelwood mechanism seems to be generally preferred, the bonding of the reactant molecules to the atoms weakening its bonds and preparing the molecule for reaction by reducing the activation energy required for the reaction to occur \parencite{Baxter2002}.
 
 The complete heterogeneous catalytic reaction consists in a series of elementary steps such as reactant dissociation, adsorption, surface diffusion, surface chemical reactions, and desorption that are nowadays extensively studied \textit{via} different theoretical computing methods such as density-functional theory (DFT - \cite{Reuter2004, Molenbroek2009, Yawei2015, Gaggioli2019, Chatelier2020}) or more recently machine learning \parencite{Kitchin2018, Schlexer2019, Anstine2023} as a function of the reaction parameters.
 
 Due to the increase of interest in the field of catalysis, synchrotron techniques have been developed to study the reaction in \textit{operando} conditions, meaning that the reaction happens while being observed \parencite{Meirer2018}.
 The first step towards the use of these experimental methods is to understand what specific signatures on the working catalyst can be identified using an x-ray probe.
-% (sec. \ref{sec:XRIntMatter}, tab. \ref{tab:techniques}).
 
 \subsection{Active sites in heterogeneous catalysis}
 
-Heterogeneous catalysis being a surface process, the tendency is to use small particles which maximise the surface area to volume ratio, increasing the number and variety of available active sites for catalysis, while favouring the emergence of edges and corners \parencite{Zambelli1996, Hendriksen2010, Vogt2022}.
+Heterogeneous catalysis being a surface process, the tendency is to use small catalysts which maximise the surface area to volume ratio, increasing the number and variety of available active sites for catalysis, while favouring the emergence of edges and corners \parencite{Zambelli1996, Hendriksen2010, Vogt2022}.
 This statement is at the origin of the push towards ever smaller samples for heterogeneous catalysis, by controlling and investigating their shape \parencite{Lee2006, Tian2007, Bratlie2007, Lee2009}, bringing forward nanoparticle catalysis \parencite{Che1989, Raimondi2005, Arico2005, Molenbroek2009, VanSanten2010, Schauermann2013}.
 As an example, platinum (Pt) nanoparticles (NPs) are of great interest for the petrochemical industry \parencite{Astruc2005}, fuel cell technology and for automobile exhaust gas purification \parencite{Heck2001}.
 The formation of surface oxides on specific facets of Pt-Rh nanoparticles has also been correlated with an increased activity during the oxidation of \ce{CO} \parencite{Hejral2018}.
-
-The surface of nanoparticles can be understood as constituted of facets (fig. \ref{fig:Samples}) whose crystallographic orientation depends on the nanoparticle synthesis route, its size, and on the absence (Wulff construction) or not (Winterbottom construction) of substrate \parencite{Winterbottom1967, Boukouvala2021}.
-The orientation and structure of each facet on the nanoparticle surface, described by its Miller (hkl) indices, has been shown to have a key role in the surface strain field and in the adsorption properties of the catalysts \parencite{Zhou2012, Wu2017, Wu2021}.
-Between facets are the nanoparticle edges and corners, notorious for being very favourable adsorption sites due to a low local coordination geometry \parencite{Huang2008, Jiang2009}.
-\cite{CalleVallejo2014}, \cite*{CalleVallejo2015}, \cite*{CalleVallejo2018} have used density functional theory (DFT) to show an approximate linear trend between the generalised coordination number $\bar{CN(i)}$ of a nanoparticle surface atom $i$ with $n_i$ neighbours (eq. \ref{eq:CN}) and its adsorption properties.
-The \textit{Taylor ratio} translates this effect by defining the fraction between active sites and the total exposed surface \parencite{Taylor1925}.
-\textcolor{Important}{CalleVallejo2023?}
-
-\begin{equation}
-    \bar{CN(i)} = \sum_{j=1}^{n_i} \frac{cn(j) n_j}{cn_{max}}
-    \label{eq:CN}
-\end{equation}
-where \textit{cn} is the usual coordination number.%, \textit{i.e.} the number of neighbouring atoms.
-
-However, strong adsorption sites are not always the most active sites, following the Sabatier principle, it is possible that if the adsorption is too strong, there is no subsequent desorption of the reaction product \parencite{Nilsson2005, Jiang2009}.
-
-The activity of single facets can also be studied with \textit{single crystals}, much larger crystals, synthesised in a way so that their macroscopic surface consists of a single crystallographic plane (fig. \ref{fig:Samples}).
 
 \begin{figure}[!htb]
     \centering
@@ -108,19 +89,32 @@ The activity of single facets can also be studied with \textit{single crystals},
     \label{fig:Samples}
 \end{figure}
 
+The surface of nanoparticles can be understood as constituted of facets (fig. \ref{fig:Samples}) whose crystallographic orientation depends on the nanoparticle synthesis route, its size, and on the absence (Wulff construction) or not (Winterbottom construction) of substrate \parencite{Wulff1901, Winterbottom1967, Boukouvala2021}.
+The orientation and structure of each facet on the nanoparticle surface, described by its Miller (hkl) indices, has been shown to have a key role in the surface strain field and in the adsorption properties of the catalysts \parencite{Zhou2012, Wu2017, Wu2021}.
+Between facets are the nanoparticle edges and corners, notorious for being very favourable adsorption sites due to a low local coordination geometry \parencite{Huang2008, Jiang2009}.
+Calle-Valejo et al. \parencite*{CalleVallejo2014, CalleVallejo2015, CalleVallejo2018, CalleVallejo2023} have used density functional theory (DFT) to show an approximate linear trend between the \textit{generalised} coordination number $\bar{CN(i)}$ of a nanoparticle surface atom $i$ with $n_i$ neighbours (eq. \ref{eq:CN}) and its adsorption properties, highlighting the importance of taking into account not only the number of first-nearest neighbours, but also the number of second nearest neighbours.
+The \textit{Taylor ratio} translates this effect by defining the fraction between active sites and the total exposed surface \parencite{Taylor1925}.
+
+\begin{equation}
+    \overline{CN}(i) = \sum_{j=1}^{n_i} \frac{cn(j)}{cn_{max}}
+    \label{eq:CN}
+\end{equation}
+where \textit{cn} is the coordination number of the surface site, and $cn_{max}$ the maximum number of first nearest neighbour in the bulk.
+
+However, strong adsorption sites are not always the most active sites, following the Sabatier principle, it is possible that if the adsorption is too strong, there is no subsequent desorption of the reaction product \parencite{Nilsson2005, Jiang2009}.
+
+The activity of single facets can also be studied with \textit{single crystals}, much larger crystals, synthesised in a way so that their macroscopic surface can be considered as a single crystallographic plane (fig. \ref{fig:Samples}).
+
 \subsection{Linking strain and reactivity}
-
-In addition to shape-dependent catalytic activ- ity, lattice strain14 has a considerable influence on the reactivity of metal surfaces. By modifying the distances between surface atoms, tensile or compressive lattice strain induces an upward or down- ward shift of the d-band centre15, resulting, respectively, in a strengthening or weakening of the bonding to adsorbed reacting species. In platinum (Pt) for instance, a 1\% tensile (compressive) strain can upshift (downshift) the 5d-band by as much as ~ 0.1 eV16, dramatically affecting the surface reactivity17 and in turn the catalytic activity (dupraz)
-pareil dans suzana 2019
-
-ALSO OF IMPORTANCE IS THE COORDINATION NUMBER
 
 A modern theoretical approach to the interaction between surface and adsorbates in heterogeneous catalysis has been proposed by Hammer, Norskov and Mavrikakis \parencite*{Hammer1995, Mavrikakis1998, Hammer2000} for transition metals, which is at the origin of the strain-reactivity studies in the frame of this thesis.
 
 In a crystalline lattice, the energy levels of electrons are so close that they form bands \parencite{Ashcroft76}, the study considers that the energy levels of the \textit{d}-bands in transition metals is responsible for bonding and adsorption in catalytic reactions, the main conclusion being that there is a direct relation between lattice strain, adsorption energy and surface reactivity, which has been confirmed by later studies \parencite{Jakob2001, Kitchin2004, Kibler2005, Gsell1998, Ontaneda2015, Weissmuller2019}.
-Moreover, d-bands narrowing effect also justifies the difference between bulk, surfaces steps and kinks in terms of reactivity \parencite{Haydock1972, Desjonqueres1975, Egelhoff1987, Hammer2006, Khorshidi2018}.
-\textcolor{Important}{Check ref CA, also d-band centre ?, write more about scaling reactions, surface strain etc}
+Moreover, d-bands narrowing effects also justifies the difference between bulk, surfaces steps and kinks in terms of reactivity \parencite{Haydock1972, Desjonqueres1975, Egelhoff1987, Hammer2006, Khorshidi2018}.
+In Mavrikakis et al. \parencite*{Mavrikakis1998}, the application of tensile or compressive lattice strain is shown to cause the d-band centre to shift upward or downward, leading to a strengthening or weakening of the bonding of adsorbed oxygen on a \ce{Ru} (0001) surface, respectively.
+The magnitude of this effect was also shown to depend on the nature of the adsorbed specie.
+Moreover, the dissociation of \ce{CO} was shown to be facilitated by an increase of tensile strain.
 
 Two parameters are of key importance when investigating the role of the nanoparticle structure in its catalytic activity and selectivity, the link between particle shape/size and the type of facets, edges and corners exhibited on the surface, and the importance of the strain field in the adsorption of molecules participating in the reaction \parencite{Abuin2019}.
 
-The application of this approach has been demonstrated by Wang et al. in \cite*{Wang2016}, which pionereed scientific studies for strain engineering in catalysis \parencite{NilssonPingel2018}, probed with techniques sensitive to the catalyst structure \parencite{Somorjai1991}, \textit{i.e} to the lattice strain if the resolution is good enough, such as surface x-ray diffraction \parencite{Resta2020a}, and Bragg coherent diffraction imaging \parencite{Sneed2015, Ulvestad2016, Kim2019, Bjorling2019, Passos2020, Carnis2021a, Carnis2021b, Dupraz2022} in which strain has been proven to impact the catalytic properties of the catalyst.
+The application of this approach has been demonstrated by Wang et al. in \cite*{Wang2016}, which pioneered scientific studies for strain engineering in catalysis \parencite{NilssonPingel2018}, probed with techniques sensitive to the catalyst structure \parencite{Somorjai1991}, \textit{i.e} to the lattice strain if the resolution is good enough, such as surface x-ray diffraction \parencite{Resta2020a}, and Bragg coherent diffraction imaging \parencite{Sneed2015, Ulvestad2016, Kim2019, Bjorling2019, Passos2020, Carnis2021a, Carnis2021b, Dupraz2022} in which strain has been proven to impact the catalytic properties of the catalyst.
