--- a/Sections/2_Theory_Models/Introduction.tex
+++ b/Sections/2_Theory_Models/Introduction.tex
@@ -1,12 +1,12 @@
 Understanding the different mechanisms at play when photons interact with matter is of crucial importance to be able to decide how to use x-rays as a probe in material science.
 Each phenomenon is at the source of different techniques (tab. \ref{tab:techniques} - fig. \ref{fig:TechniquesDataExamples}), scattering brings surface x-ray diffraction (SXRD) and Bragg coherent diffraction imaging (BCDI), two techniques used in the frame of this thesis that yield complementary information about the sample bulk (\textit{i.e.} below the surface) and surface structure.
 
-X-ray absorption together with the photoelectric effect explained by Einstein in \cite*{Einstein1905} are at the origin of a third technique used, x-ray photoelectron spectroscopy, sensitive to the electronic structure of the adsorbates on the sample's surface.
+X-ray absorption together with the photoelectric effect explained by Einstein in \cite*{Einstein1905} are at the origin of the third technique used during this work, x-ray photoelectron spectroscopy, sensitive to the electronic structure of the adsorbates on the sample's surface.
 
 \begin{table}[!htb]
 \centering
 \resizebox{\textwidth}{!}{%
-    \begin{tabular}{l|l|l|l|l}
+    \begin{tabular}{l|l|l|l}
         Phenomena & Technique & Sample & Information \\
         \toprule
         Scattering & Bragg Coherent & Pt particles & Shape, 3D strain \\
@@ -18,7 +18,6 @@ X-ray absorption together with the photoelectric effect explained by Einstein in
         \midrule
         Absorption & X-ray Photoelectron & Pt single crystals & Species presence, \\
         & Spectroscopy (XPS) & (111), (100) & quantity, oxidation state \\
-        \bottomrule
     \end{tabular}
     }
     \caption{
@@ -39,8 +38,9 @@ X-ray absorption together with the photoelectric effect explained by Einstein in
     \label{fig:TechniquesDataExamples}
 \end{figure}
 
-In this chapter, heterogeneous catalysis will be discussed, as well the main reaction mechanisms occuring during catalytic reactions.
+In this chapter, heterogeneous catalysis, as well as the main reaction mechanisms during which it occurs will be discussed,
 The concept of active sites will be introduced together with the link between adsorption and surface strain, crucial for the study of catalytic reaction with x-ray diffraction techniques that are intrinsically sensitive to lattice strain in crystals.
-The origin of each technique from fundamentals that not only tailor their experimental design but also their operability and the information one can gain from their use will be detailed (tab \ref{tab:techniques}).
-Finally, the importance of open-source, user-friendly, comprehensive, and detailed computer programs will be adressed with \text{Gwaihir}, a \textit{Python} software developped during this thesis not only to bring new users to BCDI, but also to facilitate the data analysis workflow.
-A brief description of the other sofwares used during this thesis will be given.
+The origin of each technique from fundamentals that not only tailor their experimental design but also the information one can gain from their use will be detailed (tab \ref{tab:techniques}).
+
+Finally, the importance of open-source, user-friendly, comprehensive, and detailed computer programs will be addressed with \text{Gwaihir}, a \textit{Python} software developed during this thesis not only to bring new users to BCDI, but also to facilitate the data analysis workflow.
+A brief description of the other softwares used during this thesis will also be given.
